Thu Apr 12 12:01:52 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed bug in client and server to accept the force send if
	  the packet is send from silc_[server/client]_packet_process
	  function.  Otherwise the packets are never delivered, oops.

Wed Apr 11 22:10:15 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Disable force sending of packets when REKEY protocol is active.
	  We must assure that no packet is sent directly when rekey is
	  performed.  All packets must be sent through packet queue.
	  Added macro SILC_SERVER_IS_REKEY to silcd/server.h and
	  SILC_CLIENT_IS_REKEY to lib/silcclient/client.h.  Affected
	  function is silc_[server/client]_packet_send_real to check
	  the situation.

	* Replaced the SIM paths from example config files to 
	  /usr/local/modules.  Also, make install creates now
	  /usr/local/silc/logs directory to hold all the SILC server
	  logs.

Wed Apr 11 16:59:59 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Made the configure.in.pre work on Solaris.  Patch by salo.

	* Made all ciphers compatible with non-x86 machines.  Defined
	  CBC mode macros into lib/silccrypt/ciphers_def.h.

Tue Apr 10 20:32:44 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed the make install.

Tue Apr 10 16:20:34 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* When MAC computation fails the silc_packet_decrypt returned 0
	  even though it was supposed to return -1.  Fixed this.  The
	  affected file is lib/silccore/silcpacket.c.

	* Do not replace the config files in /etc/silc (in make install)
	  if they already exist.  Affected file ./Makefile.am.

	* Do not send re-key packets immediately but through packet queue.
	  Affected file silcd/protocol.c and lib/silcclient/protocol.c.

	* Changed silc_net_check_host_by_sock to return FALSE if the
	  IP/DNS could not be resolved.  Though, it returns the IP address
	  now even if it could not resolve it (but returns also FALSE).