@@ -741,8 +741,8 @@ silc_client_protocol_rekey_send_packet(SilcSKE ske,
   SilcClient client = (SilcClient)ctx->client;
 
   /* Send the packet immediately */
-  silc_client_packet_send(client, ctx->sock, type, NULL, 0, NULL, NULL,
-			  packet->data, packet->len, FALSE);
+  silc_client_packet_send_flush(client, ctx->sock, type, NULL, 0, NULL, NULL,
+				packet->data, packet->len);
 }
 
 /* Performs re-key as defined in the SILC protocol specification. */
@@ -815,9 +815,9 @@ SILC_TASK_CALLBACK(silc_client_protocol_rekey)
 	   */
 
 	  /* Send the REKEY_DONE to indicate we will take new keys into use */
-	  silc_client_packet_send(client, ctx->sock, 
-				  SILC_PACKET_REKEY_DONE, 
-				  NULL, 0, NULL, NULL, NULL, 0, FALSE);
+	  silc_client_packet_send_flush(client, ctx->sock, 
+					SILC_PACKET_REKEY_DONE, 
+					NULL, 0, NULL, NULL, NULL, 0);
 
 	  /* The protocol ends in next stage. */
 	  protocol->state = SILC_PROTOCOL_STATE_END;
@@ -829,8 +829,8 @@ SILC_TASK_CALLBACK(silc_client_protocol_rekey)
 	 */
 
 	/* Start the re-key by sending the REKEY packet */
-	silc_client_packet_send(client, ctx->sock, SILC_PACKET_REKEY, 
-				NULL, 0, NULL, NULL, NULL, 0, FALSE);
+	silc_client_packet_send_flush(client, ctx->sock, SILC_PACKET_REKEY, 
+				      NULL, 0, NULL, NULL, NULL, 0);
 
 	if (ctx->pfs == TRUE) {
 	  /* 
@@ -867,9 +867,9 @@ SILC_TASK_CALLBACK(silc_client_protocol_rekey)
 
 	  /* Send the REKEY_DONE to indicate we will take new keys into use 
 	     now. */ 
-	  silc_client_packet_send(client, ctx->sock, 
-				  SILC_PACKET_REKEY_DONE, 
-				  NULL, 0, NULL, NULL, NULL, 0, FALSE);
+	  silc_client_packet_send_flush(client, ctx->sock, 
+					SILC_PACKET_REKEY_DONE, 
+					NULL, 0, NULL, NULL, NULL, 0);
 
 	  /* The protocol ends in next stage. */
 	  protocol->state = SILC_PROTOCOL_STATE_END;
@@ -932,8 +932,8 @@ SILC_TASK_CALLBACK(silc_client_protocol_rekey)
 
     /* Send the REKEY_DONE to indicate we will take new keys into use 
        now. */ 
-    silc_client_packet_send(client, ctx->sock, SILC_PACKET_REKEY_DONE, 
-			    NULL, 0, NULL, NULL, NULL, 0, FALSE);
+    silc_client_packet_send_flush(client, ctx->sock, SILC_PACKET_REKEY_DONE, 
+				  NULL, 0, NULL, NULL, NULL, 0);
     
     /* The protocol ends in next stage. */
     protocol->state = SILC_PROTOCOL_STATE_END;
